--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <!-- GamePeerSDK Demo -->
   <script type="module">
-    import GamePeerSDK from './GamePeerSDK.js';
+    import GamePeerSDK from './src/modules/GamePeerSDK.js';
     
     document.addEventListener('DOMContentLoaded', () => {
       try {
