--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           ctx.clearRect(0, 0, canvas.width, canvas.height);
           
           // Debug log all players
-          console.log('Current players:', game.players);
+          // console.log('Current players:', game.players);
           
           // Render players
           Object.entries(game.players).forEach(([id, player]) => {
