make rollup builds and fix keyboard example

--- a/examples/keyboard/index.html
+++ b/examples/keyboard/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GamePeerSDK - Keyboard Demo</title>
-    <script type="module" src="keyboard-demo.js"></script>
+    <script src="../../dist/gamepeer-sdk.js"></script>
+    <script src="keyboard-demo.js"></script>
     <style>
         body { 
             margin: 0;
