--- a/examples/interactive/index.html
+++ b/examples/interactive/index.html
@@ -53,7 +53,7 @@
 
   <!-- GamePeerSDK Demo -->
   <script type="module">
-    import GamePeerSDK from '../../src/modules/GamePeerSDK.js';
+    import GamePeerSDK from '../../dist/gamepeer-sdk.esm.js';
     
     document.addEventListener('DOMContentLoaded', () => {
       try {
