renamed to GamePeerJS

--- a/examples/interactive/index.html
+++ b/examples/interactive/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="../../dist/gamepeer-sdk.js"></script>
+  <script src="../../dist/gamepeer-js.js"></script>
     <script src="interactive-demo.js"></script>
   <title>P2P Game with PeerJS</title>
   <style>
