--- a/examples/keyboard/index.html
+++ b/examples/keyboard/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GamePeerSDK - Keyboard Demo</title>
-    <script src="../../dist/gamepeer-sdk.js"></script>
+    <title>GamePeerJS - Keyboard Demo</title>
+    <script src="../../dist/gamepeer-js.js"></script>
     <script src="keyboard-demo.js"></script>
     <style>
         body { 
@@ -26,7 +26,7 @@
 </head>
 <body>
     <h1>Keyboard Controls Demo</h1>
-    <p>Demonstrates handling keyboard input with GamePeerSDK</p>
+    <p>Demonstrates handling keyboard input with GamePeerJS</p>
     <!-- Canvas will be created by the demo script -->
 </body>
 </html>
