--- a/examples/matchmaking/index.html
+++ b/examples/matchmaking/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GamePeer SDK - Matchmaking Demo</title>
+    <title>GamePeerJS - Matchmaking Demo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body>
-    <h1>GamePeer SDK - Matchmaking Demo</h1>
+    <h1>GamePeerJS - Matchmaking Demo</h1>
     <div class="container">
         <div class="panel">
             <h2>Create Room</h2>
