--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GamePeerSDK Examples</title>
+    <title>GamePeerJS Examples</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -51,7 +51,7 @@
     </style>
 </head>
 <body>
-    <h1>GamePeerSDK Examples</h1>
+    <h1>GamePeerJS Examples</h1>
     
     <div class="example-card">
         <h2>Keyboard Controls Demo</h2>
